# dynapork

./: .gitignore  Cargo.toml  Dockerfile  README.md  changelog.md  dynapork.sln  example.docker-compose.yml  example_userdata.yml  go.mod  userdata.schema.json
.github/workflows/: deploy-docker-container-on-release.yml  run-unit-tests.yml
cmd/dynapork/: main.go
dynapork/: Cargo.toml
dynapork/src/: lib.rs  main.rs  porkbun.rs
internal/httpclient/: httpclient.go
internal/ipmonitor/: ipmonitor.go  ipmonitor_test.go
internal/porkbunrecord/: porkbunapitypes.go  porkbunrecord.go  porkbunrecord_test.go
main/src/: Common.Functions.fs  Common.Types.fs  Config.Functions.fs  Config.Types.fs  DNSRecord.Types.fs  EditDNSRecord.Functions.fs  EditDNSRecord.Types.fs  Environment.Functions.fs  Environment.Types.fs  IPWatcher.Functions.fs  IPWatcher.Types.fs  Ping.Functions.fs  Ping.Types.fs  PorkBunError.Types.fs  Program.fs  Secrets.fs  main.fsproj
main/test/: Common.Functions.Test.fs  EditDNSRecord.Functions.Test.fs  Environment.Functions.Test.fs  HttpClientInterceptionUtil.fs  Main.Test.fsproj  Main.fs  Ping.Functions.Test.fs
notes/: data.md  events.md  general.md  interview.md  workflows.md
src/: client.rs  common_types.rs  config.rs  constants.rs  lib.rs  main.rs  ping.rs  retrieve.rs  test_fixtures.rs
util/src/: Command.Types.fs  DNSRecord.Functions.fs  DNSRecord.Types.fs  IPAddress.Functions.fs  IPAddress.Types.fs  Library.fs  PublicIP.Functions.fs  PublicIP.Types.fs  Util.fsproj
util/test/: Main.fs  Sample.fs  Util.Test.fsproj
(+7 files in other folders)
