[package]
name = "dynapork"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["dev"]
dev = ["dep:dotenv"]
bare_metal = []
docker = []


[dependencies]
dotenv = { version = "0.15.0", optional = true }
reqwest = { version = "0.11.16", features = ["blocking", "json"] }
serde = { version = "1.0.95", features = ["derive"] }
serde_json = { version = "1.0.95" }
